# CV_Lab2

./: .gitignore  CMakeLists.txt  README.md  filters.cpp  filters.h  main.cpp  utilities.cpp
